FIX: fix padding & add align

--- a/src/styles/CreateOrder.scss
+++ b/src/styles/CreateOrder.scss
@@ -9,7 +9,8 @@
 
 	div {
 		display: flex;
-		padding: 15px, 0px;
+		padding: 15px 0px;
+		align-items: center;
 		justify-content: space-between;
 		gap: 15px;
 	}
